deployment/gke/deployment-gateway.yml
apiVersion: v1
kind: Service
metadata:
  name: api-emi-gateway
  labels:
    run: api-emi-gateway
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http-ws
  selector:
    run: api-emi-gateway
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: api-emi-gateway
spec:
  selector:
    matchLabels:
      run: api-emi-gateway
  serviceName: "api-emi-gateway"
  replicas: 2
  template:
    metadata:
      labels:
        run: api-emi-gateway
    spec:
      containers:
      - name: api-emi-gateway
        volumeMounts:
        - name: google-application-credentials
          mountPath: "/etc/GOOGLE_APPLICATION_CREDENTIALS"
          readOnly: true
        image: IMAGE_NAMESPACE/IMAGE_NAME:IMAGE_TAG
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        livenessProbe:
          # # tcp probe
          # tcpSocket:
          #   port: 3000
          # an http probe
          tcpSocket:
            port: 3000
          # length of time to wait for a pod to initialize
          # after pod startup, before applying health checking
          initialDelaySeconds: 30
          timeoutSeconds: 10
        resources:
          limits:
            cpu: 400m
            memory: 1200Mi
          requests:
            cpu: 200m
            memory: 200Mi
      imagePullSecrets:
      - name: gitlab-auth
              
      volumes:
      - name: google-application-credentials
        secret:
          secretName: google-application-credentials
